# chess

./: .gitmodules  README.md
glfwchess/: CMakeLists.txt  README.md
glfwchess/src/: main.cpp
magic_bitboard/: .gitignore  CMakeLists.txt  README.md
magic_bitboard/src/: bitboard.c  bitboard.h  magic.c  magic.h  movegen.c  movegen.h  pgn.c  pgn.h  position.c  position.h  types.h  validate.c
magic_bitboard/tests/: perft.c
